k8s/session-management/session-management-front.yaml
#############################################################
######################### FRONT END #########################
# deployment of the container pocfrontend listening to port 3500
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front
      tier: webserver
  template:
    metadata:
      labels:
        app: front
        tier: webserver
    spec:
      containers:
      - name: pocfrontend
        image: pocfrontend:1.0               
        ports:
           - name: http-front
             containerPort: 3500      
        volumeMounts:
           - mountPath : /log
             name: log-volume
           - mountPath : /config
             name: config-volume
      volumes:
      - name: log-volume
        hostPath:           
           path: '/host_mnt/d/dev/poc-k8s/log/front'           
           type: Directory
      - name: config-volume
        hostPath:           
           path: '/host_mnt/d/dev/poc-k8s/config/istio'           
           type: Directory
---
# Service exposing frontend on node port 30000
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  type: NodePort
  selector:
    app: front
    tier: webserver
  ports:
  - port: 3500
    name: http-fr
    targetPort: http-front
    nodePort: 30000
