k8s/session-management/stateless.yaml

#####################################################################
######################### STATELESS BACKEND #########################
# Deployment for pocbackend containers, listening on port 3000
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stateless-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stateless
      tier: appserver
  template:
    metadata:
      labels:
        app: stateless
        tier: appserver
    spec:
      containers:
      - name: pocbackend
        image: pocbackend:1.0        
        ports:
           - name: http-stateless
             containerPort: 3000        
        volumeMounts:
           - mountPath : /log
             name: log-volume
           - mountPath : /config
             name: config-volume
      volumes:
      - name: log-volume
        hostPath:           
           path: '/host_mnt/d/dev/poc-k8s/log/stateless'           
           type: Directory
      - name: config-volume
        hostPath:           
           path: '/host_mnt/d/dev/poc-k8s/config/istio'           
           type: Directory
---
# Service for Stateless containers, listening on port 3000
apiVersion: v1
kind: Service
metadata:
  name: api-stateless
spec:
  selector:
    app: stateless
    tier: appserver
  ports:
  - port: 3001
    name: http-stless
    targetPort: http-stateless
