k8s/session-management/stateful.yaml
####################################################################
######################### STATEFUL BACKEND #########################
####################################################################

# Service for Stateful containers, listening on port 3002
apiVersion: v1
kind: Service
metadata:
  name: api-stateful
spec:
  selector:
    app: stateful
    tier: appserver
  ports:
  - port: 3002
    name: http-stful
    targetPort: http-stateful
---
# Deployment for pocbackend containers, listening on port 3000
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stateful-backend
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: stateful
      tier: appserver
  template:
    metadata:
      labels:
        app: stateful
        tier: appserver
    spec:
       containers:
       - name: pocbackend
         image: pocbackend:1.0
         ports:
          - name: http-stateful
            containerPort: 3000
         volumeMounts:
          - mountPath : /log
            name: log-volume-stateful
          - mountPath : /config
            name: config-volume-stateful
       - name: localsessionmanager
         image: localsessionmanager:1.0
         ports:
          - name: http-lmgt
            containerPort: 3400
         volumeMounts:
          - mountPath : /log
            name: log-volume-session
          - mountPath : /config
            name: config-volume-session
       volumes:
       - name: log-volume-stateful
         hostPath:           
           path: '/host_mnt/d/dev/poc-k8s/log/stateful'           
           type: Directory
       - name: config-volume-stateful
         hostPath:           
           path: '/host_mnt/d/dev/poc-k8s/config/istio'           
           type: Directory
       - name: log-volume-session
         hostPath:           
           path: '/host_mnt/d/dev/poc-k8s/log/session'           
           type: Directory
       - name: config-volume-session
         hostPath:           
           path: '/host_mnt/d/dev/poc-k8s/config/session'           
           type: Directory
##############################################################
################# CENTRAL SESSION SERVICE ####################
##############################################################
---
# Service for Local Session Containers, listening on port 3400
apiVersion: v1
kind: Service
metadata:
  name: session-managment
spec:
  type: NodePort
  selector:
    app: session-management
    tier: appserver
  ports:
  - port: 3004
    name: http-session-management
    targetPort: http-cmgt
    nodePort: 30001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: central-session-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: session-management
      tier: appserver
  template:
    metadata:
      labels:
        app: session-management
        tier: appserver
    spec:
      containers:
      - name: sessionmanager
        image: sessionmanager:1.0        
        ports:
           - name: http-cmgt
             containerPort: 3004
        volumeMounts:
           - mountPath : /log
             name: log-volume
           - mountPath : /config
             name: config-volume
      volumes:
      - name: log-volume
        hostPath:           
           path: '/host_mnt/d/dev/poc-k8s/log/centralsession'           
           type: Directory
      - name: config-volume
        hostPath:           
           path: '/host_mnt/d/dev/poc-k8s/config/session'           
           type: Directory
---
#############################################################
########### ISTIO PROXY FOR API-STATEFUL SERVICE ############
#############################################################
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: sticky-svc
spec:
    host: api-stateful
    trafficPolicy:
     loadBalancer:
       consistentHash:
         httpCookie:
           name: session-id
           ttl: 20000s
